@@ -92,6 +92,7 @@ Please visit http://aegisub.net to download latest version
 - Added recent menu to Video Timecodes. (AMZ)
 - Playing in video mode will now play the audio as well even if it hasn't been previously loaded into audio mode (experimental). (AMZ)
 - Added hotkey to Audio's "play to end of file" (defaulting to "T"). (AMZ)
+- Fixed the default resolution for video display and resolution resampler when the script's field is blank. (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
